tests/requests/snapshots/can_get_note@notes_request.snap
---
source: tests/requests/notes.rs
expression: "(add_note_request.status_code(), add_note_request.text())"
---
(
    200,
    "{\"created_at\":\"DATE\",\"updated_at\":\"DATE\",\"id\":ID,\"title\":\"Loco note 1\",\"content\":\"Loco note 1 content\"}",
)
