tests/requests/snapshots/can_reset_password@auth_request-2.snap
---
source: tests/requests/auth.rs
expression: ctx.mailer.unwrap().deliveries()
---
Deliveries {
    count: 2,
    messages: [
        "From: System <system@example.com>\r\nTo: test@loco.com\r\nSubject: Welcome =?utf-8?b?bG9jbwo=?=\r\nMIME-Version: 1.0\r\nDate: DATE\r\nContent-Type: multipart/alternative;\r\n boundary=\"IDENTIFIER\"\r\n\r\n--IDENTIFIER\r\nContent-Type: text/plain; charset=utf-8\r\nContent-Transfer-Encoding: 7bit\r\n\r\nWelcome loco, you can now log in.\r\n  Verify your account with the link below:\r\n\r\n  http://localhost/verify#RANDOM_ID\r\n\r\n--IDENTIFIER\r\nContent-Type: text/html; charset=utf-8\r\nContent-Transfer-Encoding: quoted-printable\r\n\r\n;<html>\r\n\r\n<body>\r\n  Dear loco,\r\n  Welcome to Loco! You can now log in to your account.\r\n  Before you get started, please verify your account by clicking the link b=\r\nelow:\r\n  <a href=3D\"http://http://localhost:3000/verify#RANDOM_ID\">\r\n    Verify Your Account\r\n  </a>\r\n  <p>Best regards,<br>The Loco Team</p>\r\n</body>\r\n\r\n</html>\r\n\r\n--IDENTIFIER--\r\n",
        "From: System <system@example.com>\r\nTo: test@loco.com\r\nSubject: Your reset password =?utf-8?b?bGluawo=?=\r\nMIME-Version: 1.0\r\nDate: DATE\r\nContent-Type: multipart/alternative;\r\n boundary=\"IDENTIFIER\"\r\n\r\n--IDENTIFIER\r\nContent-Type: text/plain; charset=utf-8\r\nContent-Transfer-Encoding: 7bit\r\n\r\nReset your password with this link:\r\n\r\nhttp://localhost/reset#RANDOM_ID\r\n\r\n--IDENTIFIER\r\nContent-Type: text/html; charset=utf-8\r\nContent-Transfer-Encoding: quoted-printable\r\n\r\n;<html>\r\n\r\n<body>\r\n  Hey loco,\r\n  Forgot your password? No worries! You can reset it by clicking the link b=\r\nelow:\r\n  <a href=3D\"http://http://localhost:3000/reset#RANDOM_ID\">Reset Your Password</a>\r\n  If you didn't request a password reset, please ignore this email.\r\n  Best regards,<br>The Loco Team</br>\r\n</body>\r\n\r\n</html>\r\n\r\n--IDENTIFIER--\r\n",
    ],
}
